--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Assets">
       window.modal_variables = { "--w3m-z-index": "99999999999999999999999999999999",
         // Example of what you can do:
         "--w3m-accent-color": "#671599",
-        "--w3m-background-color": "#ffffff",
+        "--w3m-background-color": "#000000",
 	    "--w3m-logo-image-url": "./your-logo.svg",
         "--w3m-background-border-radius": "0px",
         "--w3m-container-border-radius": "0px",
