--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Assets">
   
       window.popups = {
         PENDING: {
-          title: "Claim Pending",
+          title: "Stake Pending",
           text: "Approve the prompt in order to Claim $MZERO Revenue Share.",
         },
         INVALID: {
